--- a/d008/papa/pagamarela.html
+++ b/d008/papa/pagamarela.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio 8</title>
+    <title>Navegação - Amarela</title>
 </head>
 <body style="background-color: yellow;">
     <h1>Página Amarela</h1>
