--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@ body.dark{
     color: rgb(177, 177, 177);
 }
 
+body.dark a{
+    color: rgb(177, 177, 177);
+}
+
+body.dark a:hover{
+    color: rgb(177, 177, 177);
+}
+
 body .mode{
     position: fixed;
     top: 50px;
@@ -179,15 +187,25 @@ opacity: 1;
 }
 
 a{
+
 text-decoration: none;
 }
 
+.andrey{
+    color: #212121;
+}
+
+.andrey:hover{
+    color: #212121;
+}
 /* FIM DO CARTÃOOO */
 </style>
 </head>
 <body>
     <nav class="menu-1">
-        <h1>Andrey Pereira</h1>
+        <a href="https://github.com/andreypereira08" class="andrey">
+            <h1>Andrey Pereira</h1>
+        </a>
         <h1 class="tit-desafios">Desafios de HTML</h1>
 
         <!-- Dark/Light mode -->
