--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafios</title>
+    <title>principal</title>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <script src="https://unpkg.com/phosphor-icons"></script>
@@ -41,7 +41,7 @@
 }
 
 body{
-    background-color: #e8e8e8;
+    background-color: #cacaca;
     /* display: flex;
     align-items: center;
     justify-content: center; */
@@ -53,10 +53,6 @@ body{
 
 body.dark{
     background-color: #212121;
-    color: rgb(177, 177, 177);
-}
-
-body.dark a{
     color: rgb(177, 177, 177);
 }
 
@@ -192,16 +188,23 @@ text-decoration: none;
 }
 
 .andrey{
-    color: #212121;
+    color: gray;
+}
+.andrey:hover{
+    color: gray;
 }
 
-.andrey:hover{
-    color: #212121;
+body.dark .andrey{
+    color: blue;
+}
+
+body.dark .andrey:hover{
+    color: blue;
 }
 /* FIM DO CARTÃOOO */
 </style>
 </head>
-<body>
+<body class="dark">
     <nav class="menu-1">
         <a href="https://github.com/andreypereira08" class="andrey">
             <h1>Andrey Pereira</h1>
