--- a/d011/index.html
+++ b/d011/index.html
@@ -16,6 +16,7 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
+            overflow-x: hidden;
         }
 
         div{
